# napari-midi

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
examples/: xtouch.py
napari_midi/: _dock_widget.py  xtouchmini.py
napari_midi/_tests/: test_dock_widget.py
