[metadata]
name = napari-midi

author = Juan Nunez-Iglesias
author_email = juan.nunez-iglesias@monash.edu
url = https://github.com/jni/napari-midi
license = BSD-3-Clause
description = Control napari with a USB MIDI controller
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/jni/napari-midi/issues
    Documentation = https://github.com/jni/napari-midi#README.md
    Source Code = https://github.com/jni/napari-midi
    User Support = https://github.com/jni/napari-midi/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari>=0.4.11,<0.5
    napari-plugin-engine>=0.1.4
    numpy>=1.17,<2
    pandas>=1.0,<2
    superqt>=0.2.4,<1

[options.extras_require]
docs =
    scikit-image[data]>=0.18.2

[options.entry_points] 
napari.plugin = 
    napari-midi = napari_midi
